Levantamiento servicios back con gateway

--- a/Gateway/src/main/resources/application.properties
+++ b/Gateway/src/main/resources/application.properties
@@ -9,8 +9,13 @@ spring.cloud.gateway.server.webflux.routes[0].filters[0]=RewritePath=/api/produc
 
 spring.cloud.gateway.server.webflux.routes[1].id=category-service
 spring.cloud.gateway.server.webflux.routes[1].uri=http://category-service:8082
-spring.cloud.gateway.server.webflux.routes[1].predicates[0]=Path=/categories/**
+spring.cloud.gateway.server.webflux.routes[1].predicates[0]=Path=/api/categories/**
+spring.cloud.gateway.server.webflux.routes[1].filters[0]=RewritePath=/api/categories/(?<segment>.*), /categories/${segment}
 
+spring.cloud.gateway.server.webflux.routes[2].id=user-service
+spring.cloud.gateway.server.webflux.routes[2].uri=http://user-service:8083
+spring.cloud.gateway.server.webflux.routes[2].predicates[0]=Path=/api/users/**
+spring.cloud.gateway.server.webflux.routes[2].filters[0]=RewritePath=/api/users/(?<segment>.*), /users/${segment}
 
 logging.level.org.springframework.web=DEBUG
 logging.level.com.total.products=DEBUG
