--- a/Users/src/main/resources/application.properties
+++ b/Users/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 spring.docker.compose.enabled=false
+
+jwt.secret=testsecret
+jwt.expiration-ms=3600000
