Integracion opcional Jwt
Se integro un modulo jwt, el cual permitiria mas seguridad en las peticiones a productos y categorias, pero al no utilizar la arquitectura propuesta en la prueba, se comento la configuracion, para mantener application.properties como el principal
Si se desea usar el proceso seria
Descomentar el archivo GatewayConfig
Comentar lineas de ruteo en application.properties

--- a/Gateway/src/main/resources/application.properties
+++ b/Gateway/src/main/resources/application.properties
@@ -18,3 +18,6 @@ spring.cloud.gateway.server.webflux.routes[2].filters[0]=RewritePath=/api/users/
 
 logging.level.org.springframework.web=DEBUG
 logging.level.com.total.products=DEBUG
+
+jwt.secret=${JWT_SECRET:testsecret}
+jwt.expiration-ms=${JWT_EXPIRATION_MS:3600000}
