--- a/Users/src/main/resources/application.properties
+++ b/Users/src/main/resources/application.properties
@@ -16,5 +16,5 @@ spring.h2.console.path=/h2-console
 
 spring.docker.compose.enabled=false
 
-jwt.secret=testsecret
-jwt.expiration-ms=3600000
+jwt.secret=${JWT_SECRET:testsecret}
+jwt.expiration-ms=${JWT_EXPIRATION_MS:3600000}
